public/css/clickwhale-public.css
/**
 * All of the CSS for your public-facing functionality should be
 * included in this file.
 */
:root {
	--clickwhale-page-bg-color: #FDD231;
	--clickwhale-text-color: #1A1C1D;
	--clickwhale-link-bg-color: #fee06f;
	--clickwhale-link-bg-hover: #ffffff;
	--clickwhale-link-color: #1a1c1d;
	--clickwhale-link-hover: #397eff;
	--admin-bar-height: 32px;
}

body.clickwhale-linkpage {
	min-height: 100vh;
}

body.clickwhale-linkpage.admin-bar {
	min-height: calc(100vh - var(--admin-bar-height));
}

#wp-admin-bar-clickwhale > a {
	display: flex;
	align-items: center;
}

#wp-admin-bar-clickwhale > a img {
	width: 16px;
	height: 16px;
	opacity: .6;
}

.linkpage-public--wrap {
	display: flex;
	flex-direction: column;
	align-items: center;
	padding: 1.25rem;
	min-height: 100vh;
	margin-top: 0;
	border: none;
	box-sizing: border-box;
	background-color: var(--clickwhale-page-bg-color);
	font-family: inherit;
	color: var(--clickwhale-text-color);
}

body.clickwhale-linkpage.admin-bar .linkpage-public--wrap {
	min-height: calc(100vh - var(--admin-bar-height));
	justify-content: space-between;
}

.linkpage-public--wrap * {
	box-sizing: border-box;
}

.linkpage-public--wrap .feather {
	width: 24px;
	height: 24px;
	stroke: currentColor;
	stroke-width: 2;
	stroke-linecap: round;
	stroke-linejoin: round;
	fill: none;
}

.linkpage-public--wrap ion-icon {
	font-size: 48px;
	transition: all .3s ease-in-out;
}

.linkpage-public--inner {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	margin: 0 auto;
	max-width: 700px;
	width: 100%;
}

.linkpage-public--logo {
	display: flex;
	align-items: center;
	justify-content: center;
	width: 150px;
	height: 150px;
}

.linkpage-public--logo img {
	position: relative;
	width: 100%;
	height: 100%;
	object-fit: cover;
}

.linkpage-public--logo img.rounded {
	border-radius: 10px;
}

.linkpage-public--logo img.circle {
	border-radius: 50%;
}

.linkpage-public--logo img.with-shadow {
	box-shadow: 0 10px 15px rgba(0, 0, 0, .1);
}

.linkpage-public--title {
	text-align: center;
	font-size: 3.5rem;
	line-height: 1em;
	color: var(--clickwhale-text-color);
	font-weight: 700;
	margin: 1.5rem 0 0 0;
	max-width: 800px;
	width: 100%;
}

.linkpage-public--description {
	text-align: center;
	font-size: 1.5rem;
	line-height: 1.2em;
	color: var(--clickwhale-text-color);
	opacity: .7;
	margin: .5rem 0 0 0;
	max-width: 800px;
	width: 100%;
}

.linkpage-public--links {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	gap: 20px;
	width: 100%;
	margin: 3rem 0 0 0;
}

.linkpage-public--links > *:first-child {
	margin: 0;
}

.linkpage-public-row {
	width: 100%;
}

.linkpage-public-row > a {
	display: flex;
	width: 100%;
	align-items: center;
	justify-content: space-between;
	gap: 10px;
	background-color: var(--clickwhale-link-bg-color);
	border-radius: 10px;
	color: var(--clickwhale-link-color);
	font-size: 1rem;
	line-height: 1.2em;
	text-decoration: none;
	font-weight: 400;
	letter-spacing: normal;
	padding: .75rem 1.5rem;
	transition: all .3s ease-in-out;
	text-align: center;
}

.linkpage-public-row > a ion-icon {
	color: var(--clickwhale-link-color);
}

.linkpage-public-row > a:hover {
	background-color: var(--clickwhale-link-bg-hover);
	box-shadow: 0 15px 25px rgba(0, 0, 0, .05);
	color: var(--clickwhale-link-hover);
}

.linkpage-public-row > a:hover ion-icon {
	color: var(--clickwhale-link-hover);
}

.linkpage-row--image {
	display: flex;
	align-items: center;
	justify-content: center;
	max-width: 48px;
	height: 48px;
	flex: 1;
	background-position: center center;
	background-repeat: no-repeat;
	background-size: 16px 16px;
	font-size: 36px;
}

.linkpage-row--image img {
	width: 100%;
	height: 100%;
	object-fit: cover;
	border-radius: 50%;
}

.linkpage-row--image svg {
	width: 48px;
	height: 48px;
}

.linkpage-row--title--wrap {
	display: flex;
	align-items: center;
	justify-content: center;
	flex-direction: column;
	flex: 4;
	min-height: 48px;
	text-align: center;
}

.linkpage-row--title {
	font-weight: 700;
}

.linkpage-row--subtitle {
	font-size: .875rem;
	line-height: 1em;
	opacity: .7;
	margin: .25rem 0 0 0;
}

.linkpage-row--end {
	max-width: 36px;
	flex: 1;;
}

/*---------- CW HEADING BLOCK ----------*/

.linkpage-public-row--cw_heading {
	display: block;
	width: 100%;
	text-align: center;
	margin: 1.5rem 0 0 0;
}

.linkpage-public-row--cw_heading h2 {
	font-size: 1.7rem;
	line-height: 1.3em;
	font-weight: 700;
	margin: 0;
	color: var(--clickwhale-text-color);
}

.linkpage-public-row--cw_heading p {
	font-size: 1.25rem;
	line-height: 1.3em;
	margin: 0;
	color: var(--clickwhale-text-color);
	opacity: .7;
}

/*---------- CW SEPARATOR BLOCK ----------*/

.linkpage-public-row--cw_separator {
	margin: .5rem 0;
	border: none;
	border-top: 1px solid var(--clickwhale-text-color);
	opacity: .1;
}

/*---------- CW CUSTOM CONTENT BLOCK ----------*/

.linkpage-public-row--content {
	position: relative;
	display: inline-block;
	width: 100%;
	background-color: var(--clickwhale-link-bg-color);
	color: var(--clickwhale-link-color);
	font-size: 1rem;
	line-height: 1.3em;
	letter-spacing: normal;
	padding: 1.5rem 2.5rem;
	border-radius: 10px;
}

.linkpage-public-row--content h1,
.linkpage-public-row--content h2,
.linkpage-public-row--content h3,
.linkpage-public-row--content h4,
.linkpage-public-row--content h5,
.linkpage-public-row--content h6 {
	line-height: 1.3em;
	font-weight: 700;
	margin: 1.5rem 0 0 0;
	color: var(--clickwhale-text-color);
}

.linkpage-public-row--content h1,
.linkpage-public-row--content h2 {
	font-size: 1.7rem;
}

.linkpage-public-row--content h3 {
	font-size: 1.5rem;
}

.linkpage-public-row--content h4 {
	font-size: 1.5rem;
}

.linkpage-public-row--content h5 {
	font-size: 1.3rem;
}

.linkpage-public-row--content h6 {
	font-size: 1.2rem;
}

.linkpage-public-row--content p,
.linkpage-public-row--content ul,
.linkpage-public-row--content ol {
	margin: .5rem 0 0;
}

.linkpage-public-row--content ul,
.linkpage-public-row--content ol {
	padding: 0;
	list-style: none;
}

.linkpage-public-row--content ol {
	counter-reset: cw-cc-list-counter
}

.linkpage-public-row--content ul li,
.linkpage-public-row--content ol li {
	position: relative;
	padding-left: 30px;
}

.linkpage-public-row--content ol li {
	counter-increment: cw-cc-list-counter;
}

.linkpage-public-row--content ul li::before {
	position: absolute;
	display: block;
	content: '';
	top: 10px;
	left: 0;
	width: 12px;
	height: 1px;
	background-color: var(--clickwhale-text-color);
	opacity: .5;
}

.linkpage-public-row--content ol li::before {
	position: absolute;
	display: block;
	content: counter(cw-cc-list-counter) ". ";
	top: 0;
	left: 0;
	opacity: .5;
}

.linkpage-public-row--content img {
	display: block;
	max-width: 100%;
}

.linkpage-public-row--content img.alignleft {
	margin: 0 1.5rem 1.5rem 0;
}

.linkpage-public-row--content img.alignright {
	margin: 0 0 1.5rem 1.5rem;
}

.linkpage-public-row--content img.alignnone {
	margin: 0 auto 1.5rem;
}

.linkpage-public-row--content * + img,
.linkpage-public-row--content * + img.alignleft,
.linkpage-public-row--content * + img.alignright,
.linkpage-public-row--content * + img.alignnone {
	margin-top: .5rem;
}


.linkpage-public-row--content a {
	display: inline;
	color: var(--clickwhale-text-color);
	text-decoration: underline;
}

.linkpage-public-row--content a:hover {
	color: var(--clickwhale-text-color);
	text-decoration: none;
	opacity: .7;
}

.linkpage-public-row--content > *:first-child {
	margin-top: 0;
}

.linkpage-public-row--content > *:last-child {
	margin-bottom: 0 !important;
}

/* ---------- */


.linkpage-public--social {
	position: relative;
	display: flex;
	align-items: center;
	justify-content: center;
	list-style: none;
	margin: 40px 0 0 0;
	padding: 0;
	gap: 20px;
}

.linkpage-public--social > li > a {
	display: block;
	text-decoration: none;
	color: var(--clickwhale-text-color);
}

.linkpage-public--social > li > a svg {
	display: block;
	width: 36px;
	height: 36px;
}

.linkpage-public--social > li > a:hover {
	opacity: .7;
}

.linkpage-public--bottom {
	margin-top: 3rem;
}

.linkpage-menu--wrap {
	width: 100%;
	max-width: 800px;
	margin: 0;
}

.linkpage-menu--wrap ul {
	display: flex;
	margin: 0;
	list-style: none;
	gap: 1rem;
	align-items: center;
	justify-content: center;
	flex-flow: row wrap;
}

.linkpage-menu--wrap ul a {
	display: block;
	color: var(--clickwhale-text-color);
	text-decoration: underline;
	font-size: .72rem;
	line-height: 1em;
}

.linkpage-menu--wrap ul a:hover {
	text-decoration: none;
	opacity: .7;
}

.linkpage-public--copyright {
	display: flex;
	align-items: inherit;
	justify-content: center;
	gap: 10px;
	margin: 2rem 0 0 0;
	font-size: 1rem;
	text-decoration: none;
	color: var(--clickwhale-text-color);
	white-space: nowrap;
}

.linkpage-public--copyright img,
.linkpage-public--copyright svg {
	display: block;
	width: 120px;
	height: auto;
	margin-top: -15px;
}

.linkpage-public--copyright:hover {
	opacity: .7;
}

@media (min-width: 1600px) {
	.linkpage-public--inner {
		max-width: 900px;
	}

	.linkpage-public--logo img {
		position: relative;
		max-width: 275px;
		max-height: 275px;
	}
}

@media (min-width: 1300px) and (max-width: 1600px) {
	.linkpage-public--inner {
		max-width: 800px;
	}
}

@media (max-width: 921px) {
	:root {
		--admin-bar-height: 46px;
	}

	.linkpage-public--logo {
		width: 75px;
		height: 75px;
	}

	.linkpage-public--title {
		font-size: 2rem;
		margin: 1rem 0 0 0;
	}

	.linkpage-public--description {
		font-size: 1.125rem;
		margin: .5rem 0 0 0;
	}

	.linkpage-public--links {
		gap: .5rem;
		margin: 2rem 0 0 0;
	}

	.linkpage-public-row > a {
		padding: .75rem .75rem;
	}

	.linkpage-row--image {
		height: 32px;
		max-width: 32px;
		font-size: 32px;
	}

	.linkpage-row--title--wrap {
		min-height: 32px;
	}

	.linkpage-row--end {
		max-width: 32px;
	}

	.linkpage-public-row--cw_heading h2 {
		font-size: 1.25rem;
	}

	.linkpage-public-row--cw_heading p {
		font-size: 1rem;
	}

	.linkpage-public-row--content {
		padding: 1rem .75rem;
	}

	.linkpage-public-row--content h1,
	.linkpage-public-row--content h2 {
		font-size: 1.375rem;
	}

	.linkpage-public-row--content h3,
	.linkpage-public-row--content h4 {
		font-size: 1.25rem;
	}

	.linkpage-public-row--content h5,
	.linkpage-public-row--content h6 {
		font-size: 1.125rem;
	}

	.linkpage-public--bottom {
		margin-top: 3rem;
	}

	.linkpage-public--copyright {
		margin-top: 2rem;
		font-size: .75rem;
	}

	.linkpage-public--copyright img,
	.linkpage-public--copyright svg {
		display: block;
		width: 100px;
		height: auto;
		margin-top: -13px;
	}
}

